<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ArticleDetailActivity">


    <TextView
        android:layout_margin="10dp"
        android:id="@+id/tv_title"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:text="@string/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_margin="10dp"
        android:id="@+id/tv_author"
        android:textSize="12sp"
        android:layout_gravity="center"
        android:text="@string/author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_margin="10dp"
        android:id="@+id/tv_article"

        android:textSize="15sp"
        android:layout_gravity="center"
        android:text="@string/article"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_margin="10dp"
        android:onClick="delete"
        android:background="@color/colorPrimary"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete"
        android:id="@+id/btn_delete"/>
</LinearLayout>