<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:id="@+id/card_article">

    <LinearLayout
        android:background="@color/colorPrimaryDark"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_margin="10dp"
            android:id="@+id/tv_author"
            android:textColor="@color/colorTextPrimary"
            android:textSize="12sp"
            android:layout_gravity="center"
            android:text="@string/author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_margin="10dp"
            android:id="@+id/tv_title"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:text="@string/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_margin="10dp"
            android:id="@+id/tv_article"
            android:textColor="@color/colorTextPrimary"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:text="@string/article"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>


