<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profile"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/ic_launcher_person"/>
    <TextView
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_home"
        android:textAlignment="center"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        />
    <Button
        android:textColor="@color/colorTextPrimary"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/article_list"
        android:id="@+id/btn_article_list"/>
    <Button
        android:id="@+id/btn_create_list"
        android:textColor="@color/colorTextPrimary"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/create_list"/>
    <Button
        android:onClick="logout"
        android:layout_width="100dp"
        android:layout_height="50dp"/>

</LinearLayout>